--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,5 @@
 :root {
-    --font-serif: 'Piazzolla Variable', 'Piazzolla', serif;
+    --font-sans: 'Commissioner Variable', 'Commissioner', serif;
 
     --colour-ectoplasm-100: rgba(228, 249, 225, 1);
     --colour-ectoplasm-200: rgba(206, 249, 204, 1);
@@ -100,17 +100,17 @@
     --colour-brown-800: rgba(90, 45, 12, 1);
     --colour-brown-900: rgba(68, 34, 6, 1);
     --colour-brown-950: rgba(45, 23, 2, 1);
-    --colour-primary-50:  var(--colour-plum-50);
-    --colour-primary-100: var(--colour-plum-100);
-    --colour-primary-200: var(--colour-plum-200);
-    --colour-primary-300: var(--colour-plum-300);
-    --colour-primary-400: var(--colour-plum-400);
-    --colour-primary-500: var(--colour-plum-500);
-    --colour-primary-600: var(--colour-plum-600);
-    --colour-primary-700: var(--colour-plum-700);
-    --colour-primary-800: var(--colour-plum-800);
-    --colour-primary-900: var(--colour-plum-900);
-    --colour-primary-950: var(--colour-plum-950);
+    --colour-primary-50:  var(--colour-orange-50);
+    --colour-primary-100: var(--colour-orange-100);
+    --colour-primary-200: var(--colour-orange-200);
+    --colour-primary-300: var(--colour-orange-300);
+    --colour-primary-400: var(--colour-orange-400);
+    --colour-primary-500: var(--colour-orange-500);
+    --colour-primary-600: var(--colour-orange-600);
+    --colour-primary-700: var(--colour-orange-700);
+    --colour-primary-800: var(--colour-orange-800);
+    --colour-primary-900: var(--colour-orange-900);
+    --colour-primary-950: var(--colour-orange-950);
 }
 
 /* Box sizing rules */
@@ -192,10 +192,33 @@ body, html {
 }
 
 body {
-    font-family: var(--font-serif);
-    font-variant-numeric: oldstyle-nums proportional-nums; 
-        
-    color: var(--colour-grey-950);
-    background-color: var(--colour-grey-50);
+    font-family: var(--font-sans);
+    font-variant-numeric: oldstyle-nums proportional-nums;
 
+    color: var(--colour-grey-900);
+}
+
+h1, h2, h3, h4, h5, h6 {
+    color: var(--colour-grey-950);
+    font-variation-settings: 'FLAR' 100, 'VOLM' 100;
+}
+
+h1 {
+    font-weight: 900;
+}
+
+a {
+    color: var(--colour-weezer-700);
+    font-weight: 500;
+
+    :visited {
+        color: var(--colour-bubblegum-700);
+    }
+}
+
+p.errorbox {
+    background-color: var(--colour-red-100);
+    padding: .25rem .5rem;
+    max-width: max-content;
+    border: 1px solid var(--colour-red-200);
 }
